--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#f90105</color>
-    <color name="colorPrimaryDark">#e70109</color>
+    <color name="colorPrimaryDark">#dc000b</color>
     <color name="colorAccent">#f90105</color>
 
     <color name="white">#fffefe</color>
