--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -129,18 +129,6 @@
 
 
                 <android.support.design.widget.FloatingActionButton
-                    android:id="@+id/btnfavorite"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|end"
-                    android:layout_marginLeft="@dimen/fab_margin"
-                    android:layout_marginRight="@dimen/fab_margin"
-                    card_view:srcCompat="@android:drawable/btn_star"
-                    android:layout_alignBottom="@+id/ivrecette"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="23dp" />
-
-                <android.support.design.widget.FloatingActionButton
                     android:id="@+id/btnshare"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -148,9 +136,9 @@
                     android:layout_marginLeft="@dimen/fab_margin"
                     android:layout_marginRight="@dimen/fab_margin"
                     card_view:srcCompat="@android:drawable/ic_menu_share"
-                    android:layout_marginEnd="12dp"
-                    android:layout_alignBottom="@+id/ivrecette"
-                    android:layout_toStartOf="@+id/btnfavorite" />
+                    android:layout_alignBottom="@+id/textView4"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginBottom="13dp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
     </ScrollView>
