--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_search1"
+        android:id="@+id/action_account"
         android:icon="@drawable/ic_account"
         android:title="Account"
         app:showAsAction="ifRoom">
