--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -139,8 +139,18 @@
                     android:layout_alignBottom="@+id/textView4"
                     android:layout_alignParentEnd="true"
                     android:layout_marginBottom="13dp" />
+
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/btnfavorite"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|end"
+                    android:layout_marginLeft="@dimen/fab_margin"
+                    android:layout_marginRight="@dimen/fab_margin"
+                    card_view:srcCompat="@drawable/ic_favorite"
+                    android:layout_alignBottom="@+id/btnshare"
+                    android:layout_marginBottom="13dp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
     </ScrollView>
 </LinearLayout>
-
