--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,76 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+    android:gravity="center_horizontal">
 
-    <android.support.v7.widget.Toolbar
-
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/toolbar"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:fitsSystemWindows="true"
-        android:minHeight="?attr/actionBarSize"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-    </android.support.v7.widget.Toolbar>
-
-
-    <Button
-        android:id="@+id/btnConnecter"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView4"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="33dp"
-        android:background="?attr/colorPrimary"
         android:text="Se Connecter"
-        android:textColor="@color/white"
-        android:textSize="14sp" />
+        android:textStyle="bold"
+        android:textSize="@dimen/abc_text_size_headline_material" />
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:background="#c0c0c0" />
+
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:columnCount="2"
+        android:rowCount="2"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Email"/>
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:ems="10"
+            android:id="@+id/emailField" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Password"/>
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/passwordField" />
+    </GridLayout>
 
     <Button
-        android:id="@+id/btnInscrire"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btnConnecter"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="33dp"
-        android:background="@color/colorPrimaryDark"
-        android:text="S'inscrire"
-        android:textColor="@android:color/background_light"
-        android:textSize="14sp" />
+        android:text="se connecter"
+        android:id="@+id/loginButton"
+        android:ems="8"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp" />
 
-
-    <ImageButton
-        android:id="@+id/btnHomeLogin"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="14dp"
-        android:layout_marginTop="12dp"
-        android:background="@color/colorPrimary"
-        app:srcCompat="@drawable/ic_action_home"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/toolbar"
-        app:srcCompat="@drawable/home21" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btnConnecter"
+        android:text="@string/register_prompt"
+        android:id="@+id/registerPromptText"
+        android:textColor="@android:color/background_dark"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:textSize="@dimen/abc_text_size_subtitle_material_toolbar" />
 
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="11dp"
-        android:text="Ou"
-        android:textColor="@color/colorPrimaryDark" />
 
-</RelativeLayout>
+
+</LinearLayout>
