--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -3,12 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_account"
-        android:icon="@drawable/ic_account"
-        android:title="Account"
-        app:showAsAction="ifRoom"></item>
+        android:title="Favorites"
+        >
+
+    </item>
     <item
         android:id="@+id/action_event"
-        android:icon="@drawable/event"
+        android:icon="@drawable/icone_event"
         android:title="Evenements"
         app:showAsAction="ifRoom">
     </item>
