--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -24,7 +24,7 @@
         </WebView>
 
         <!-- App Bar -->
-        <android.support.design.widget.AppBarLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -34,12 +34,21 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#0237f5"
+                android:background="#f50206"
                 >
 
 
             </android.support.v7.widget.Toolbar>
-        </android.support.design.widget.AppBarLayout>
+
+            <ImageButton
+                android:id="@+id/btnBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:background="#f50206"
+                app:srcCompat="@drawable/ic_backbuttonlight" />
+        </RelativeLayout>
 
 
     </android.support.design.widget.CoordinatorLayout>
